tests/baselines/reference/conditionalExpressionNewLine9.errors.txt
tests/cases/compiler/conditionalExpressionNewLine9.ts(1,9): error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
tests/cases/compiler/conditionalExpressionNewLine9.ts(2,5): error TS2552: Cannot find name 'b'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine9.ts(3,7): error TS2552: Cannot find name 'd'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine9.ts(3,11): error TS2552: Cannot find name 'e'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine9.ts(4,5): error TS2552: Cannot find name 'c'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine9.ts(5,7): error TS2552: Cannot find name 'f'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine9.ts(5,11): error TS2552: Cannot find name 'g'. Did you mean 'v'?


==== tests/cases/compiler/conditionalExpressionNewLine9.ts (7 errors) ====
    var v = a 
            ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
      ? b
        ~
!!! error TS2552: Cannot find name 'b'. Did you mean 'v'?
        ? d : e
          ~
!!! error TS2552: Cannot find name 'd'. Did you mean 'v'?
              ~
!!! error TS2552: Cannot find name 'e'. Did you mean 'v'?
      : c
        ~
!!! error TS2552: Cannot find name 'c'. Did you mean 'v'?
        ? f : g;
          ~
!!! error TS2552: Cannot find name 'f'. Did you mean 'v'?
              ~
!!! error TS2552: Cannot find name 'g'. Did you mean 'v'?